Finished edits based on referee reports

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20638,7 +20638,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{MandelFarmer:2018,
-   author = {{Mandel}, I. and {Farmer}, A.},
+   author = {{Mandel}, Ilya and {Farmer}, Alison},
     title = "{Merging stellar-mass binary black holes}",
   journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
@@ -27366,10 +27366,15 @@ archivePrefix = {arXiv},
 @ARTICLE{Lin:2021,
        author = {{Lin}, Luyao and {Bingham}, Derek and {Broekgaarden}, Floor and {Mandel}, Ilya},
         title = "{Uncertainty Quantification of a Computer Model for Binary Black Hole Formation}",
-      journal = {arXiv e-prints},
+   JOURNAL = {Ann. Appl. Statist.},
+  FJOURNAL = {Annals of Applied Statistics},
+      YEAR = {2021},
+    VOLUME = {15},
+    NUMBER = {4},
+     PAGES = {1604-1627},
+      ISSN = {1932-6157},
+       DOI = {10.1214/21-AOAS1484},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, Statistics - Applications, Statistics - Methodology},
-         year = 2021,
-        month = jun,
 archivePrefix = {arXiv},
        eprint = {2106.01552},
  primaryClass = {astro-ph.IM},
@@ -31441,3 +31446,179 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211113704W},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Sun:2021,
+       author = {{Sun}, Ning-Chen and {Maund}, Justyn R. and {Crowther}, Paul A. and {Hirai}, Ryosuke and {Kashapov}, Amir and {Liu}, Ji-Feng and {Liu}, Liang-Duan and {Zapartas}, Emmanouil},
+        title = "{An environment analysis of the Type Ib SN 2019yvr and the possible presence of an inflated binary companion}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = nov,
+          eid = {arXiv:2111.06471},
+        pages = {arXiv:2111.06471},
+archivePrefix = {arXiv},
+       eprint = {2111.06471},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211106471S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Broekgaarden:2022,
+       author = {{Broekgaarden}, Floor S. and {Berger}, Edo and {Stevenson}, Simon and {Justham}, Stephen and {Mandel}, Ilya and {Chru{\'s}li{\'n}ska}, Martyna},
+        title = "{Impact of Massive Binary Star and Cosmic Evolution on Gravitational Wave Observations II: Double Compact Object Rates and Properties}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = dec,
+archivePrefix = {arXiv},
+       eprint = {2112.05763},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211205763B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Kruckow:2021,
+       author = {{Kruckow}, Matthias U. and {Neunteufel}, Patrick G. and {Di Stefano}, Rosanne and {Gao}, Yan and {Kobayashi}, Chiaki},
+        title = "{A Catalog of Potential Post-Common Envelope Binaries}",
+      journal = {\apj},
+     keywords = {Catalogs, Common envelope binary stars, Stellar masses, Close binary stars, White dwarf stars, Subdwarf stars, Common envelope evolution, Eclipsing binary stars, Spectroscopic binary stars, Cataclysmic variable stars, 205, 2156, 1614, 254, 1799, 2054, 2154, 444, 1557, 203, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = oct,
+       volume = {920},
+       number = {2},
+          eid = {86},
+        pages = {86},
+          doi = {10.3847/1538-4357/ac13ac},
+archivePrefix = {arXiv},
+       eprint = {2107.05221},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...920...86K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Gruzinov:2020,
+       author = {{Gruzinov}, Andrei and {Levin}, Yuri and {Matzner}, Christopher D.},
+        title = "{Negative dynamical friction on compact objects moving through dense gas}",
+      journal = {\mnras},
+     keywords = {accretion, accretion discs, black hole physics, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
+         year = 2020,
+        month = feb,
+       volume = {492},
+       number = {2},
+        pages = {2755-2761},
+          doi = {10.1093/mnras/staa013},
+archivePrefix = {arXiv},
+       eprint = {1906.01186},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.492.2755G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Nitz:2021-4OGC,
+       author = {{Nitz}, Alexander H. and {Kumar}, Sumit and {Wang}, Yi-Fan and {Kastha}, Shilpa and {Wu}, Shichao and {Sch{\"a}fer}, Marlin and {Dhurkunde}, Rahul and {Capano}, Collin D.},
+        title = "{4-OGC: Catalog of gravitational waves from compact-binary mergers}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = dec,
+          eid = {arXiv:2112.06878},
+        pages = {arXiv:2112.06878},
+archivePrefix = {arXiv},
+       eprint = {2112.06878},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211206878N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Briel:2021,
+       author = {{Briel}, M.~M. and {Eldridge}, J.~J. and {Stanway}, E.~R. and {Stevance}, H.~F. and {Chrimes}, A.~A.},
+        title = "{Estimating Transient Rates from Cosmological Simulations and BPASS}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = nov,
+          eid = {arXiv:2111.08124},
+        pages = {arXiv:2111.08124},
+archivePrefix = {arXiv},
+       eprint = {2111.08124},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211108124B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Lipunov:1996,
+       author = {{Lipunov}, V.~M. and {Postnov}, K.~A. and {Prokhorov}, M.~E.},
+        title = "{The Scenario Machine: restrictions on key parameters of binary evolution.}",
+      journal = {\aap},
+     keywords = {STARS: BINARIES: GENERAL, BINARIES: CLOSE STARS: EVOLUTION, STARS: NEUTRON, GALAXY: STELLAR CONTENT},
+         year = "1996",
+        month = "Jun",
+       volume = {310},
+        pages = {489-507},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996A&A...310..489L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ng:2021,
+       author = {{Ng}, Ken K.~Y. and {Vitale}, Salvatore and {Farr}, Will M. and {Rodriguez}, Carl L.},
+        title = "{Probing Multiple Populations of Compact Binaries with Third-generation Gravitational-wave Detectors}",
+      journal = {\apjl},
+     keywords = {Gravitational waves, Gravitational wave sources, Gravitational wave astronomy, 678, 677, 675, Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2021,
+        month = may,
+       volume = {913},
+       number = {1},
+          eid = {L5},
+        pages = {L5},
+          doi = {10.3847/2041-8213/abf8be},
+archivePrefix = {arXiv},
+       eprint = {2012.09876},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...913L...5N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Olsen:2022,
+       author = {{Olsen}, Seth and {Venumadhav}, Tejaswi and {Mushkin}, Jonathan and {Roulet}, Javier and {Zackay}, Barak and {Zaldarriaga}, Matias},
+        title = "{New binary black hole mergers in the LIGO--Virgo O3a data}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2022,
+        month = jan,
+archivePrefix = {arXiv},
+       eprint = {2201.02252},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220102252O},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Li:2022,
+       author = {{Li}, Yin-Jie and {Wang}, Yuan-Zhu and {Tang}, Shao-Peng and {Yuan}, Qiang and {Fan}, Yi-Zhong and {Wei}, Da-Ming},
+        title = "{Find the twins: Evidence for a population of coalescing binary black holes with nearly equal-mass components}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2022,
+        month = jan,
+          eid = {arXiv:2201.01905},
+        pages = {arXiv:2201.01905},
+archivePrefix = {arXiv},
+       eprint = {2201.01905},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220101905L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Hannam:2021,
+       author = {{Hannam}, Mark and {Hoy}, Charlie and {Thompson}, Jonathan E. and {Fairhurst}, Stephen and {Raymond}, Vivien and {LIGO}, members of the and {Virgo collaborations}},
+        title = "{Measurement of general-relativistic precession in a black-hole binary}",
+      journal = {arXiv e-prints},
+     keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = dec,
+archivePrefix = {arXiv},
+       eprint = {2112.11300},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211211300H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
