--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -132,7 +132,7 @@ The LIGO and Virgo detectors have directly observed gravitational waves from mer
 
 \section{Introduction}
 
-Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 70 detections of gravitational waves from merging black holes \citep{BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,Nitz:2021,GWTC3}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
+Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 70 detections of gravitational waves from merging black holes \citep{BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,GWTC3,Nitz:2021-4OGC,Olsen:2022}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
 
 The full range of astrophysical questions that gravitational-wave observations will answer is itself a topic of active study and debate. For example: What can gravitational-wave observations of merging binaries tell us about the stellar and binary evolution that preceded the mergers?  Can the observations constrain the amount of mass loss and expansion experienced by massive stars? Or the stability and consequences of mass transfer, including the infamous common-envelope phase of evolution? Or the amount of mass fallback during supernova explosions, or the kicks that supernovae impart to compact objects? Does the redshift distribution of merging compact objects contain an imprint of the star formation history of the Universe?  Can we use these mergers to probe dynamics in dense stellar environments such as globular clusters? The answers to these important and exciting questions may also in turn influence our understanding of topics as diverse as reionisation and heavy-element nucleosynthesis.
 
@@ -149,7 +149,7 @@ We summarise the existing observations of merging binary black holes and closely
 
 
 \subsubsection{The confirmed detections to date}
-During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Approximately 30 more binary black holes (the exact numbers here and above depend on the assumed threshold for confident detections) were observed during the second half of the third observing run, from November 2019 through March 2020 \citep{GWTC3}.  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020}.  
+During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Approximately 30 more binary black holes (the exact numbers here and above depend on the assumed threshold for confident detections) were observed during the second half of the third observing run, from November 2019 through March 2020 \citep{GWTC3}.  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020,Nitz:2021-4OGC,Olsen:2022}.  
 
 Meanwhile, the detection of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  Another confident detection of a binary neutron star merger, GW190425 \citep{GW190425}, as well as two mergers of neutron stars with black holes,  GW200105 and GW200115 \citep{GW200105}, did not yield electromagnetic counterparts.  
 We shall focus on binary black holes for the remainder of this article.
@@ -171,9 +171,9 @@ The masses of the black-hole binaries observed to date are shown in figure \ref{
 
 \textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star \citep{GW190814}) to $\simeq 80 M_\odot$ for GW190521 \citep{GW190521} (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}) and GW200220\_061928 \citep{GWTC3}.  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-3.4}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $34 M_\odot$.  The vast majority of merging binary black holes, $\approx 99\%$, have both companion masses below $45 M_\odot$ \citep{GWTC3:pop}.   
 
-Most observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios span a very broad range in some cases.  Several observed events, such as GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  
+Most observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios span a very broad range in some cases.  Several observed events, such as GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  Features in the mass distribution, such as possible mass pairings, are a topic of active investigation \citep{}.
 
-\textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021,GWTC3:pop}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
+\textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021,GWTC3:pop}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521} and GW200129 \citep{Hannam:2021}, though other explanations for their signal morphology (e.g., eccentricity, see below) have been proposed.
 
 \textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.9$ (distances of around 250 Mpc to 6 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO \citep{GWTC3}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
@@ -320,12 +320,12 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 The merging black holes may not have formed in the same binary at all.  Instead, in this channel, they are remnants of independent massive stars (perhaps single, or each in its own separate binary), but are then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
-\item[b.] As the most massive objects in the cluster, the black holes mass segregate toward the cluster centre as kinetic energy is equipartitioned by dynamical scattering interactions \citep{Spitzer:1969,BinneyTremaine}, but see \citep{Trenti:2013}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favour of the two heavier objects forming a binary \citep{HillsFullerton:1980}.  
+\item[b.] As the most massive objects in the cluster, the black holes mass segregate toward the cluster centre as kinetic energy is equipartitioned by dynamical scattering interactions \citep{Spitzer:1969,BinneyTremaine}, but see \citep{Trenti:2013}.  Once there, they may form binaries through three-body interactions, in which one of three initially unbound objects is endowed with sufficient kinetic energy to leave a bound binary, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favour of the two heavier objects forming a binary \citep{HillsFullerton:1980}.  
 \item[c,d.] If the orbital speed of the binary's components is greater than the typical speed of stars in the cluster (the binary is `hard'), then subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary \citep{Heggie:1975}. The interlopers are likely to leave with slightly higher speeds than they arrived with, each time removing energy from the binary.   Meanwhile, `soft' binaries, with orbital speeds smaller than the velocity dispersion in the cluster, will be disrupted. 
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Rodriguez:2016,Askar:2016,Park:2017,FragioneKocsis:2018,Mapelli:2020} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation.  
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Rodriguez:2016,Askar:2016,Park:2017,FragioneKocsis:2018,Mapelli:2020} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole (see section \ref{ecc} for a discussion of capture through gravitation-wave emission), while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation.  
 
 An accretion disk in an active galactic nucleus can act as a catalyst for binary black hole mergers \citep{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020}.   Compact objects in active galactic nuclei may form directly in the disk, be captured by the disk through gas drag, or settle into a disk through resonant relaxation against the stellar background \citep{SzolgyenKocsis:2018}.  Once in the disk, black holes can be transported radially until, perhaps, being captured into migration traps, where high black-hole concentrations increase interaction rates \citep{Bellovary:2016,Yang:2019,Secunda:2019,PengChen:2021}.  Once binaries form they can be hardened by a combination of dynamical interactions and gas accretion.  As with other mergers in galactic nuclei, the high escape velocity makes it more likely that merger products will be retained despite gravitational-wave recoil kicks, enabling hierarchical mergers \citep{Yang:2019,Secunda:2020,Tagawa:2021}.  While active galactic nuclei are promising environments for black-hole binary formation, some of the many uncertainties include star formation in disks, the efficiency of migration traps \citep{PanYang:2021}, the details of gas interaction with black holes and binaries, and feedback from accretion \citep{Tagawa:2020}.
 
@@ -375,7 +375,7 @@ f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\text
 \end{eqnarray}
 Merging binary black holes are rare outcomes indeed!  [Merging binary neutron stars are similarly rare: while stars with initial masses sufficient to form a neutron star, between roughly 8 and 20 solar masses, are more common than the heavier stars necessary to form black holes, neutron star natal kicks and mass loss during supernovae are more likely to disrupt binaries; the expected yields for binary neutron star mergers are within an order of magnitude of those for binary black holes.]
 
-The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 50$ Gpc$^{-3}$ yr$^{-1}$, or 5 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, including accounting for the redshift-dependent metallicity-specific star formation history convolved with the time-delay distribution \citep{Belczynski:2010,Mapelli:2017,Klencki:2018,Chruslinska:2019,Neijssel:2019,ChruslinskaNelemans:2019,Tang:2020,Broekgaarden:2021,Santoliquido:2021}.  
+The star formation rate in the local Universe is $\sim 0.01 M_\odot$ Mpc$^{-3}$ yr$^{-1}$ \citep{MadauDickinson:2014}; for an average binary mass of $\sim 1 M_\odot$, the yield $f_\textrm{BBH} \sim 5 \times 10^{-6}$ corresponds to a binary black hole merger rate of $\sim 50$ Gpc$^{-3}$ yr$^{-1}$, or 5 per Myr for a Milky-Way equivalent galaxy with a space density of $0.01$ Mpc$^{-3}$.  Of course, the actual calculation of the binary merger rate requires significantly more care than the back-of-the-envelope model presented here, accounting both for initial conditions \citep{deMinkBelczynski:2015,MoeDiStefano:2017}, including orbital eccentricity, and for orbital evolution, particularly mass transfer.   This is typically undertaken by population synthesis models as described in section \ref{form:isol}.  Moreover, the redshift-dependent metallicity-specific star formation history must be convolved with the time-delay distribution between star formation and binary merger in order to determine the local merger rate \citep{Belczynski:2010,Mapelli:2017,Klencki:2018,Chruslinska:2019,Neijssel:2019,ChruslinskaNelemans:2019,Tang:2020,Broekgaarden:2021,Santoliquido:2021}.  
 
 \subsubsection{Chemically homogeneous evolution}
 
@@ -419,7 +419,7 @@ Very asymmetric binaries, particularly GW190814, present another challenge for m
 \subsubsection{Mass ratios}
 The mass ratios of most merging black-hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer.   However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}, and the strict mass ratio constraint may in fact apply to black-hole binaries that only experience stable mass transfer episodes \citep{vanSon:2021}.
 
-Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge with each other.  However, more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole that merges with lower-mass black holes \citep{Mandel:2008,Belczynski:2014VMS}. 
+Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge with each other following dynamical exchanges.  However, more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole that merges with lower-mass black holes \citep{Mandel:2008,Belczynski:2014VMS}. 
 
 Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} and \citet{Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
 
@@ -432,7 +432,7 @@ This argument for slowly spinning black holes in merging compact binaries is pot
 
 Meanwhile, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events (see section \ref{sec:GWevents}).  Among spin variables that remain approximately constant during the inspiral, gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$ \citep{Racine:2008,Ajith:2011}, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins or a combination of both \citep{Farr:2017}, with isotropic spin directions being the hallmark of dynamical formation.  The diverging conclusions regarding the fraction of binaries with significant and preferentially aligned component spins \citep{GWTC2:pop,GWTC3:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parametrised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that 80\% of observed binaries contain non-spinning black holes while 20\% have moderate net spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components, the degree of spin precession, and possible correlations between spins and masses remain open issues. 
 
-\subsubsection{Orbital eccentricities}
+\subsubsection{Orbital eccentricities}\label{ecc}
 	The orbital eccentricities of merging black-hole binaries may contain information about their previous evolution \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep[][but see \cite{Tsang:2013}]{OLeary:2008}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.  We discussed the exciting indications of possible measurements of non-zero eccentricity \citep{RomeroShaw:2021} in section \ref{sec:GWevents}.
 
 
@@ -463,7 +463,7 @@ Three years ago, in an earlier version of this review, we suggested that two of 
 
 Other individually exciting events could include the first confirmed discovery of an intermediate-mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{AmaroSeoaneSantamaria:2009,Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral of a stellar-mass compact object into such a black hole \citep[e.g.,][]{Mandel:2008,Haster:2015IMRI,Haster:2016}. 
 
-A source with a detectable eccentricity would clearly signal a dynamical capture \citep[e.g.,][]{Zevin:2017,Rodriguez:2018}. 
+A source with a detectable eccentricity when gravitational-wave frequencies exceed $\gtrsim 10$ Hz, where current ground-based detectors are sensitive, would clearly signal a dynamical capture \citep[e.g.,][]{Zevin:2017,Rodriguez:2018}. 
 
 A measurement of an effective spin value close to either 1 or $-1$ in a binary with nearly equal-mass components would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate an unexpected anti-alignment between rapid spins and the binary's orbital angular momentum, perhaps through either a supernova spin tilt or dynamical formation.  
 
@@ -475,7 +475,7 @@ Although electromagnetic transients are not broadly expected to be associated wi
 
 Population statistics will generally yield more information than individual events.  We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.  We can separate the approaches to inference on the observed populations into two types: unmodelled or weakly modelled inference, and inference that relies on specific accurate models. 
 
-At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{BBH:O1,GWTC2:pop,GWTC3:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parametrised mass models to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated inference on the spin distributions with parametrised phenomenological models \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
+At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{BBH:O1,GWTC2:pop,GWTC3:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parametrised mass models to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated inference on the mass and spin distributions with parametrised phenomenological models \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021,Li:2022}.  
 
 We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  These approaches have been proposed for both mass \citep{Mandel:2015,Mandel:2016cluster} and spin \citep{Farr:2018,Powell:2019} distributions.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to identify the various clusters and measure the relative frequencies of events in these categories.
 
